=go-swagger echo with api-key principal
