# app.go
@@ -1,110 +1,167 @@
-// Copyright 2016 Google Inc. All rights reserved.
-// Use of this source code is governed by the Apache 2.0
-// license that can be found in the LICENSE file.
-
-// Sample endpoints demonstrates a Cloud Endpoints API.
 package main
 
 import (
-	"encoding/base64"
-	"encoding/json"
-	"fmt"
 	"log"
-	"net/http"
 	"os"
-	"strconv"
 
-	"github.com/gorilla/mux"
+	loads "github.com/go-openapi/loads"
+	flags "github.com/jessevdk/go-flags"
+
+	"github.com/dominictracey/rugby-scores/restapi"
+	"github.com/dominictracey/rugby-scores/restapi/operations"
 )
 
-// gorilla/mux router
+// This file was generated by the swagger tool.
+// Make sure not to overwrite this file after you generated it because all your edits would be lost!
+
 func main() {
-	r := mux.NewRouter()
 
-	r.Path("/echo").Methods("POST").
-		HandlerFunc(echoHandler)
-
-	r.Path("/auth/info/googlejwt").Methods("GET").
-		HandlerFunc(authInfoHandler)
-	r.Path("/auth/info/googleidtoken").Methods("GET").
-		HandlerFunc(authInfoHandler)
-	r.Path("/auth/info/firebase").Methods("GET", "OPTIONS").
-		Handler(corsHandler(authInfoHandler))
-	r.Path("/auth/info/auth0").Methods("GET").
-		HandlerFunc(authInfoHandler)
-
-	log.Print("serving on 8080")
-	http.Handle("/", r)
-	port := 8080
-	if portStr := os.Getenv("PORT"); portStr != "" {
-		port, _ = strconv.Atoi(portStr)
+	swaggerSpec, err := loads.Analyzed(restapi.SwaggerJSON, "")
+	if err != nil {
+		log.Fatalln(err)
 	}
-	log.Fatal(http.ListenAndServe(fmt.Sprintf(":%d", port), nil))
-}
 
-// echoHandler reads a JSON object from the body, and writes it back out.
-func echoHandler(w http.ResponseWriter, r *http.Request) {
-	var msg interface{}
-	if err := json.NewDecoder(r.Body).Decode(&msg); err != nil {
-		if _, ok := err.(*json.SyntaxError); ok {
-			errorf(w, http.StatusBadRequest, "Body was not valid JSON: %v", err)
-			return
+	api := operations.NewHireADroneAPI(swaggerSpec)
+	server := restapi.NewServer(api)
+	defer server.Shutdown()
+
+	parser := flags.NewParser(server, flags.Default)
+	parser.ShortDescription = "Endpoints Example"
+	parser.LongDescription = "A simple Google Cloud Endpoints API example."
+
+	server.ConfigureFlags()
+	for _, optsGroup := range api.CommandLineOptionsGroups {
+		_, err := parser.AddGroup(optsGroup.ShortDescription, optsGroup.LongDescription, optsGroup.Options)
+		if err != nil {
+			log.Fatalln(err)
 		}
-		errorf(w, http.StatusInternalServerError, "Could not get body: %v", err)
-		return
 	}
 
-	b, err := json.Marshal(msg)
-	if err != nil {
-		errorf(w, http.StatusInternalServerError, "Could not marshal JSON: %v", err)
-		return
+	if _, err := parser.Parse(); err != nil {
+		code := 1
+		if fe, ok := err.(*flags.Error); ok {
+			if fe.Type == flags.ErrHelp {
+				code = 0
+			}
+		}
+		os.Exit(code)
 	}
-	w.Write(b)
+
+	server.ConfigureAPI()
+
+	if err := server.Serve(); err != nil {
+		log.Fatalln(err)
+	}
+
 }
 
-// corsHandler wraps a HTTP handler and applies the appropriate responses for Cross-Origin Resource Sharing.
-type corsHandler http.HandlerFunc
-
-func (h corsHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Access-Control-Allow-Origin", "*")
-	if r.Method == "OPTIONS" {
-		w.Header().Set("Access-Control-Allow-Headers", "Authorization")
-		return
-	}
-	h(w, r)
-}
-
-// authInfoHandler reads authentication info provided by the Endpoints proxy.
-func authInfoHandler(w http.ResponseWriter, r *http.Request) {
-	encodedInfo := r.Header.Get("X-Endpoint-API-UserInfo")
-	if encodedInfo == "" {
-		w.Write([]byte(`{"id": "anonymous"}`))
-		return
-	}
-
-	b, err := base64.StdEncoding.DecodeString(encodedInfo)
-	if err != nil {
-		errorf(w, http.StatusInternalServerError, "Could not decode auth info: %v", err)
-		return
-	}
-	w.Write(b)
-}
-
-// errorf writes a swagger-compliant error response.
-func errorf(w http.ResponseWriter, code int, format string, a ...interface{}) {
-	var out struct {
-		Code    int    `json:"code"`
-		Message string `json:"message"`
-	}
-
-	out.Code = code
-	out.Message = fmt.Sprintf(format, a...)
-
-	b, err := json.Marshal(out)
-	if err != nil {
-		http.Error(w, `{"code": 500, "message": "Could not format JSON for original message."}`, 500)
-		return
-	}
-
-	http.Error(w, string(b), code)
-}
+// // Copyright 2016 Google Inc. All rights reserved.
+// // Use of this source code is governed by the Apache 2.0
+// // license that can be found in the LICENSE file.
+//
+// // Sample endpoints demonstrates a Cloud Endpoints API.
+// package main
+//
+// import (
+// 	"encoding/base64"
+// 	"encoding/json"
+// 	"fmt"
+// 	"log"
+// 	"net/http"
+// 	"os"
+// 	"strconv"
+//
+// 	"github.com/gorilla/mux"
+// )
+//
+// // gorilla/mux router
+// func main() {
+// 	r := mux.NewRouter()
+//
+// 	r.Path("/echo").Methods("POST").
+// 		HandlerFunc(echoHandler)
+//
+// 	r.Path("/auth/info/googlejwt").Methods("GET").
+// 		HandlerFunc(authInfoHandler)
+// 	r.Path("/auth/info/googleidtoken").Methods("GET").
+// 		HandlerFunc(authInfoHandler)
+// 	r.Path("/auth/info/firebase").Methods("GET", "OPTIONS").
+// 		Handler(corsHandler(authInfoHandler))
+// 	r.Path("/auth/info/auth0").Methods("GET").
+// 		HandlerFunc(authInfoHandler)
+//
+// 	log.Print("serving on 8080")
+// 	http.Handle("/", r)
+// 	port := 8080
+// 	if portStr := os.Getenv("PORT"); portStr != "" {
+// 		port, _ = strconv.Atoi(portStr)
+// 	}
+// 	log.Fatal(http.ListenAndServe(fmt.Sprintf(":%d", port), nil))
+// }
+//
+// // echoHandler reads a JSON object from the body, and writes it back out.
+// func echoHandler(w http.ResponseWriter, r *http.Request) {
+// 	var msg interface{}
+// 	if err := json.NewDecoder(r.Body).Decode(&msg); err != nil {
+// 		if _, ok := err.(*json.SyntaxError); ok {
+// 			errorf(w, http.StatusBadRequest, "Body was not valid JSON: %v", err)
+// 			return
+// 		}
+// 		errorf(w, http.StatusInternalServerError, "Could not get body: %v", err)
+// 		return
+// 	}
+//
+// 	b, err := json.Marshal(msg)
+// 	if err != nil {
+// 		errorf(w, http.StatusInternalServerError, "Could not marshal JSON: %v", err)
+// 		return
+// 	}
+// 	w.Write(b)
+// }
+//
+// // corsHandler wraps a HTTP handler and applies the appropriate responses for Cross-Origin Resource Sharing.
+// type corsHandler http.HandlerFunc
+//
+// func (h corsHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+// 	w.Header().Set("Access-Control-Allow-Origin", "*")
+// 	if r.Method == "OPTIONS" {
+// 		w.Header().Set("Access-Control-Allow-Headers", "Authorization")
+// 		return
+// 	}
+// 	h(w, r)
+// }
+//
+// // authInfoHandler reads authentication info provided by the Endpoints proxy.
+// func authInfoHandler(w http.ResponseWriter, r *http.Request) {
+// 	encodedInfo := r.Header.Get("X-Endpoint-API-UserInfo")
+// 	if encodedInfo == "" {
+// 		w.Write([]byte(`{"id": "anonymous"}`))
+// 		return
+// 	}
+//
+// 	b, err := base64.StdEncoding.DecodeString(encodedInfo)
+// 	if err != nil {
+// 		errorf(w, http.StatusInternalServerError, "Could not decode auth info: %v", err)
+// 		return
+// 	}
+// 	w.Write(b)
+// }
+//
+// // errorf writes a swagger-compliant error response.
+// func errorf(w http.ResponseWriter, code int, format string, a ...interface{}) {
+// 	var out struct {
+// 		Code    int    `json:"code"`
+// 		Message string `json:"message"`
+// 	}
+//
+// 	out.Code = code
+// 	out.Message = fmt.Sprintf(format, a...)
+//
+// 	b, err := json.Marshal(out)
+// 	if err != nil {
+// 		http.Error(w, `{"code": 500, "message": "Could not format JSON for original message."}`, 500)
+// 		return
+// 	}
+//
+// 	http.Error(w, string(b), code)
+// }
