# openapi.yaml
@@ -12,7 +12,7 @@ consumes:
 produces:
 - "application/json"
 schemes:
-- "https"
+- "http"
 paths:
   "/echo":
     post:
@@ -58,6 +58,8 @@ definitions:
         type: "string"
       email:
         type: "string"
+  principal:
+    type: string
 # This section requires all requests to any path to require an API key.
 securityDefinitions:
   # This section configures basic authentication with an API key.
@@ -72,4 +74,4 @@ securityDefinitions:
     type: "oauth2"
     x-google-issuer: "https://securetoken.google.com/rugby-scores-7"
     x-google-jwks_uri: "https://www.googleapis.com/service_accounts/v1/metadata/x509/securetoken@system.gserviceaccount.com"
-    x-google-audiences: "YOUR-PROJECT-ID"
+    x-google-audiences: "rugby-scores-7"
