# restapi/doc.go
@@ -4,7 +4,7 @@ A simple Google Cloud Endpoints API example.
 
 
     Schemes:
-      https
+      http
     Host: echo-api.endpoints.rugby-scores-7.cloud.goog
     BasePath: /
     Version: 1.0.0
